# Rend

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Source/inc/: PluginEditor.h  PluginProcessor.h  PresetManager.h  dsp.h
Source/src/: PluginEditor.cpp  PluginProcessor.cpp  PresetManager.cpp
Source/ui/: index.html  main.js
